@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-09-18 allenb   Changed the std::string constructor in vpr::GUID to be
+                    explicit.  This eliminates some autoconversion issues.
 2003-09-15 patrickh Dropped support for Draft 4 of the POSIX threads standard.
                     NEW VERSION: 0.27.11
 2003-09-10 allenb   Extended object reader interface to support push/pop
